# review-bot

./: .gitignore  .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  ChildClass.cpp  ChildClass.h  GlobalContextClass.h  ParentClass.cpp  ParentClass.h  README.md  README.rst  extract_git_diff.py  global_cplus_context.py  index.html  pyproject.toml  sample_code.cpp  schema.json  sitemap.xml  versions.json
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci_cd.yml  dependabot_automerge.yml  label.yml
doc/: Makefile  make.bat
doc/source/: conf.py
doc/source/_autoapi_templates/: index.rst
git_diff_output/: AnalysisInfo.h.gitdiff.txt  CMakeLists.txt.gitdiff.txt  Cm2Construction3D.cpp.gitdiff.txt  Cm2Construction3D.h.gitdiff.txt  Cm2ConstructionTet3D.cpp.gitdiff.txt  Cm2ConstructionTet3D.h.gitdiff.txt  OccDataStructure.cpp.gitdiff.txt  OccDataStructureBase.cpp.gitdiff.txt  PrimeConstructionTet3D.cpp.gitdiff.txt  PrimeConstructionTet3D.cpp.gitdiff.txt_split_file_112.txt  PrimeConstructionTet3D.cpp.gitdiff.txt_split_file_50.txt  PrimeConstructionTet3D.h.gitdiff.txt  PrimeFileIO.cpp.gitdiff.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_1034.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_1064.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_108.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_1100.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_127.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_153.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_161.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_178.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_192.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_206.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_223.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_241.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_272.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_296.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_321.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_367.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_380.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_394.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_409.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_428.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_438.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_451.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_464.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_477.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_486.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_495.txt  PrimeFileIO.cpp.gitdiff.txt_split_file_50.txt  (+11 more)
src/review/bot/: __init__.py  defaults.py  gh_interface.py  git_interface.py  misc.py  open_ai_interface.py
src/review/bot/cli/: __init__.py  cli.py
src/review/bot/schema/: __init__.py  schema.py
src/review/bot/schema/resources/: schema.json
src/review_bot/: __init__.py  defaults.py  exceptions.py  extract_error.py  gh_interface.py  git_interface.py  hf_model.py  misc.py  open_ai_interface.py  review.py
src/review_bot/cli/: cli.py
src/review_bot/config/: openai-config.json
src/review_bot/schema/: __init__.py  schema.py
src/review_bot/schema/resources/: suggestion.json
tests/: test_gh_interface.py  test_metadata.py  test_open_ai_interface.py
tests/samples/: README.md  function.py
tests/samples/cplus/: classes.cpp  function.cpp
tests/samples/py/: README.md  classes.py  functions_no_docs.py
version/: index.html
version/0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.1/_sources/autoapi/review/bot/cli/: index.rst.txt
version/0.1/_sources/autoapi/review/bot/misc/: index.rst.txt
version/0.1/_sources/autoapi/review/bot/open_ai_interface/: index.rst.txt
version/0.1/autoapi/: index.html
version/0.1/autoapi/review/bot/: index.html
version/0.1/autoapi/review/bot/cli/: index.html
version/0.1/autoapi/review/bot/cli/cli/: index.html
version/0.1/autoapi/review/bot/defaults/: index.html
version/0.1/autoapi/review/bot/exceptions/: index.html
version/0.1/autoapi/review/bot/gh_interface/: index.html
version/0.1/autoapi/review/bot/git_interface/: announcement.html  index.html
version/0.1/autoapi/review/bot/misc/: index.html
version/0.1/autoapi/review/bot/open_ai_interface/: index.html
version/0.1/autoapi/review/bot/schema/: index.html
version/0.1/autoapi/review/bot/schema/schema/: index.html
version/0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/0.2/_sources/autoapi/: index.rst.txt
version/0.2/_sources/autoapi/review/bot/defaults/: index.rst.txt
version/0.2/autoapi/: index.html
version/0.2/autoapi/review/bot/: index.html
version/0.2/autoapi/review/bot/cli/: index.html
version/0.2/autoapi/review/bot/defaults/: index.html
version/0.2/autoapi/review/bot/exceptions/: index.html
version/0.2/autoapi/review/bot/misc/: index.html
version/0.2/autoapi/review/bot/open_ai_interface/: index.html
version/0.2/autoapi/review/bot/schema/: index.html
version/dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
version/dev/_sources/: index.rst.txt
version/dev/_sources/autoapi/review/bot/: index.rst.txt
version/dev/_static/: documentation_options.js  search.json
version/dev/autoapi/: index.html
version/dev/autoapi/review/bot/: index.html
version/dev/autoapi/review/bot/cli/: index.html
version/dev/autoapi/review/bot/defaults/: index.html
version/dev/autoapi/review/bot/exceptions/: index.html
version/dev/autoapi/review/bot/gh_interface/: index.html
version/dev/autoapi/review/bot/git_interface/: index.html
version/dev/autoapi/review/bot/misc/: index.html
version/dev/autoapi/review/bot/open_ai_interface/: index.html
version/dev/autoapi/review/bot/schema/: index.html
version/stable/: genindex.html  index.html  py-modindex.html
version/stable/_sources/autoapi/review/bot/: index.rst.txt
version/stable/autoapi/review/bot/: index.html
version/stable/autoapi/review/bot/gh_interface/: index.html
version/stable/autoapi/review/bot/git_interface/: index.html
version/stable/autoapi/review/bot/open_ai_interface/: index.html
(+22 files in other folders)
