[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "review-bot"
version = "0.2.dev0"
description = "A Python library to automatically generate suggestions and improvements for patches in GitHub PRs by leveraging the power of OpenAI."
readme = "README.rst"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
    "requests",
    "openai>=1,<2",
    "jsonschema",
    "gitpython",
]

[project.optional-dependencies]
tests = [
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-retry==1.6.2",
    "requests==2.31.0",
    "openai==1.21.2",
    "jsonschema==4.21.1",
    "gitpython==3.1.43",
]
doc = [
    "ansys_sphinx_theme[autoapi]==0.15.2",
    "numpydoc==1.7.0",
    "Sphinx==7.2.6",
    "Sphinx-copybutton==0.5.2",
]

[project.scripts]
reviewbot = "review.bot.cli.cli:main"

[tool.flit.module]
name = "review.bot"

[project.urls]
Source = "https://github.com/ansys/review-bot"
Tracker = "https://github.com/ansys/review-bot/issues"
Homepage = "https://github.com/ansys/review-bot"
Documentation = "https://review-bot.docs.pyansys.com"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["review.bot"]

[tool.coverage.report]
show_missing = true

