[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "review-bot"
version = "0.2.dev0"
description = "A Python library to automatically generate suggestions and improvements for patches in GitHub PRs by leveraging the power of OpenAI."
readme = "README.rst"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata>=4.0,<5; python_version<='3.8'",
    "requests",
    "openai>=1,<2",
    "jsonschema",
    "gitpython",
]

[project.optional-dependencies]
tests = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-retry==1.7.0",
    "requests==2.32.4",
    "openai==1.97.0",
    "jsonschema==4.24.0",
    "gitpython==3.1.44",
]
doc = [
    "ansys_sphinx_theme[autoapi]==1.5.3",
    "numpydoc==1.8.0",
    "Sphinx==8.2.3",
    "Sphinx-copybutton==0.5.2",
]

[project.scripts]
reviewbot = "review.bot.cli.cli:main"

[tool.flit.module]
name = "review.bot"

[project.urls]
Source = "https://github.com/ansys/review-bot"
Tracker = "https://github.com/ansys/review-bot/issues"
Homepage = "https://github.com/ansys/review-bot"
Documentation = "https://review-bot.docs.pyansys.com"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["review.bot"]

[tool.coverage.report]
show_missing = true

